--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
   <meta name="image" property="og:image" content="https://www.01net.com/i/0/0/2c076a/098e4a5c532803cacd7a3a4242.jpg" />
+  <meta property="og:description" content="React chatbox made with create-react-app" />
+  <meta property="og:url" content="https://react-chatbox.nicolasbugdaci.dev" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="React Chatbox" />
