--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta property="og:description" content="React chatbox made with create-react-app" />
   <meta property="og:url" content="https://react-chatbox.nicolasbugdaci.dev" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="author" content="Nicolas Bugdaci" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="React Chatbox" />
   <!--
