--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
+  <meta property='og:title' content="React ChatBox" />
   <meta name="image" property="og:image" content="https://www.01net.com/i/0/0/2c076a/098e4a5c532803cacd7a3a4242.jpg" />
   <meta property="og:description" content="React chatbox made with create-react-app" />
   <meta property="og:url" content="https://react-chatbox.nicolasbugdaci.dev" />
